--- a/Deep Neuro-Fuzzy Systems (DNFS).ipynb
+++ b/Deep Neuro-Fuzzy Systems (DNFS).ipynb
@@ -531,7 +531,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -540,9 +540,9 @@
      "text": [
       "              precision    recall  f1-score   support\n",
       "\n",
-      "         جيد       0.96      0.91      0.93      1166\n",
-      "       متوسط       0.83      0.90      0.86       631\n",
-      "         سيء       0.79      0.77      0.78        75\n",
+      "        Good       0.96      0.91      0.93      1166\n",
+      "    Moderate       0.83      0.90      0.86       631\n",
+      "        Poor       0.79      0.77      0.78        75\n",
       "\n",
       "    accuracy                           0.90      1872\n",
       "   macro avg       0.86      0.86      0.86      1872\n",
@@ -563,18 +563,19 @@
     }
    ],
    "source": [
-    "\n",
     "model.eval()\n",
     "with torch.no_grad():\n",
     "    test_preds = model(X_test_tensor)\n",
     "    predicted_labels = torch.argmax(test_preds, dim=1)\n",
     "\n",
+    "# Print classification report with English labels\n",
+    "print(classification_report(y_test, predicted_labels, target_names=[\"Good\", \"Moderate\", \"Poor\"]))\n",
     "\n",
-    "print(classification_report(y_test, predicted_labels, target_names=[\"جيد\", \"متوسط\", \"سيء\"]))\n",
-    "\n",
+    "# Calculate and print accuracy\n",
     "accuracy = accuracy_score(y_test_tensor.numpy(), predicted_labels.numpy())\n",
     "print(f\"Test Accuracy: {accuracy*100:.2f}%\")\n",
     "\n",
+    "# Compute and display confusion matrix\n",
     "cm = confusion_matrix(y_test_tensor.numpy(), predicted_labels.numpy())\n",
     "disp = ConfusionMatrixDisplay(confusion_matrix=cm, display_labels=[\"Good\", \"Moderate\", \"Poor\"])\n",
     "\n",
